@@ -1,7 +1,7 @@
 plugins {
 	val kotlinVersion = "2.2.0"
 
-	id("org.springframework.boot") version "3.5.3"
+	id("org.springframework.boot") version "3.5.4"
 	id("io.spring.dependency-management") version "1.1.7"
 	id("org.jlleitschuh.gradle.ktlint") version "13.0.0"
 	kotlin("plugin.spring") version kotlinVersion
@@ -23,9 +23,9 @@ val kafkaClientsVersion = "4.0.0"
 val kotestVersion = "5.9.1"
 val testcontainersVersion = "1.21.3"
 val klintVersion = "1.4.1"
-val mockkVersion = "1.14.4"
-val commonVersion = "3.2024.10.25_13.44-9db48a0dbe67"
-val tokenSupportVersion = "5.0.30"
+val mockkVersion = "1.14.5"
+val commonVersion = "3.2025.06.23_14.50-3af3985d8555"
+val tokenSupportVersion = "5.0.33"
 val unleashVersion = "11.0.2"
 
 dependencyManagement {
@@ -100,5 +100,8 @@ tasks.jar {
 
 tasks.test {
 	useJUnitPlatform()
-	jvmArgs("-Xshare:off")
+	jvmArgs(
+		"-Xshare:off",
+		"-XX:+EnableDynamicAgentLoading",
+	)
 }
